--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,13 @@
         {
             "js": ["dist/main.js"],
             "css": ["dist/css/main.css"],
-            "matches": [
-                "https://myrient.erista.me/files/*"
-            ]
+            "matches": ["https://myrient.erista.me/files/*"]
         }
-    ]
- }
+    ],
+    "icons": {
+        "16": "images/icon-16.png",
+        "32": "images/icon-32.png",
+        "48": "images/icon-48.png",
+        "128": "images/icon-128.png"
+    }
+}
